--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left-side">
             <div class="profileText">
                 <div class="imgBx">
-                   <img src="/images/Jesper Wouters.jfif" alt=""> 
+                   <img src="/images/Jesper Wouters.jpg" alt=""> 
                 </div>
                 <h2>Jesper Wouters<br><span>Logistic Outbound Coördinator</span></h2>
                 <ul>
