--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
                    <img src="/images/Jesper Wouters.jpg" alt=""> 
                 </div>
                 <h2>Jesper Wouters<br><span>Logistic Outbound Coördinator</span></h2>
-                <ul>
-                <li>
-                    <span class="icon"><i class="fas fa-male"></i></span>
-                    <span class="text">Leiderdorp, 14-11-1984</span>
-                </li>
-            </ul>
+              
             </div>
             <div class="contactInfo">
                 <h3 class="title">Contact Information</h3>
@@ -81,13 +76,13 @@
         <ul>
             <li>
                 <span class="text">Nederlands</span>
-                <span class="percent">
+                <span class="percent nl">
                    <div style="width: 95%;"></div>
                 </span>
             </li>
             <li>
                 <span class="text">Engels</span>
-                <span class="percent">
+                <span class="percent eng">
                 <div style="width: 85%;"></div>
             </span>
             </li>
@@ -98,7 +93,7 @@
         <div class="right-side">
             <div class="about"></div>
             <h2 class="title2">Profiel</h2>
-            <p>Inmiddels heb ik al meer dan 10 jaar ervaring opgedaan in de logistiek en heb daar vooral leren plannen, samenwerken en coördineren. Het behalen van deadlines behoort tot mijn dagelijkse werkzaamheden. Web development is mijn grote passie en dit helpt mij in mijn dagelijkse werk logisch naar mijn werkzamheden te kijken. <br> <br>
+            <p>Inmiddels heb ik al meer dan 10 jaar ervaring opgedaan in de logistiek en heb daar vooral leren plannen, samenwerken en coördineren. Het behalen van deadlines behoort tot mijn dagelijkse werkzaamheden. Web development is mijn grote passie en dit helpt mij in mijn dagelijkse werk logisch naar mijn werkzaamheden te kijken. <br> <br>
             Mijn doel is om de logistiek en web developement te combineren in mijn dagelijks werk en meer kennis op te doen in beide disiplines.
              </p>
         <div class="about">
@@ -120,7 +115,7 @@
         </div>
         <div class="text">
             <h4>Logistic floor Coördinator</h4>
-            <p>Het coördineren van medewerkers in het logistiek proces d.m.v een logische workflow met als doel de dagelijkse deadlines behalen en klantorders op tijd bij de transporteurs aanbieden.</div>
+            <p>Het coördineren van medewerkers in het logistiek proces d.m.v een logische workflow met als doel de dagelijkse deadlines te behalen en klantorders op tijd bij de transporteurs aanbieden.</div>
     </div>
     <div class="box">
         <div class="year-company">
@@ -182,6 +177,10 @@
         <li><i class="fas fa-running"aria-hidden="true"></i> Sport</li>
         <li><i class="fas fa-video"aria-hidden="true"></i>Cinema</li>
     </ul>
+</div>
+
+<div>
+    <button class="print" onclick="myprint()">Print page</button>
 </div>
 </div>
 
